--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
-  vegaEmbed('#ny_state_map', 'js/ny_housing.json', { actions: false }).catch(console.error);
+  vegaEmbed('#ny_state_map', 'ny_housing.json', { actions: false }).catch(console.error);
 </script>
 <script>
-  vegaEmbed('#manhattan_map', 'js/manhattan.json', { actions: false }).catch(console.error);
+  vegaEmbed('#manhattan_map', 'manhattan.json', { actions: false }).catch(console.error);
 </script>
 
 </body>
