--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
   <section class="col-12 col-lg-10 mx-auto mb-4">
     <div class="card shadow-sm">
       <div class="card-header bg-white border-0 text-center">
+        <h2 class="h5 mb-0">Homework Week 10: Nationwide Housing Price Index Increase Relative to Q1 1980</h2>
+      </div>
+      <div class="card-body">
+        <p class="text-muted text-center mb-3">
+          Choropleth map showing Housing Price Index in reference to Q1 1980 with a value of 100.<br>
+          Example: NY's Q1 2025 value of 1094.0 indicates that the price for the same house has risen 10.94x since then.
+        </p>
+        <div id="us_map" class="viz-panel"></div>
+      </div>
+    </div>
+  </section>
+  <section class="col-12 col-lg-10 mx-auto mb-4">
+    <div class="card shadow-sm">
+      <div class="card-header bg-white border-0 text-center">
         <h2 class="h5 mb-0">Statewide Housing Landscape</h2>
       </div>
       <div class="card-body">
@@ -49,6 +63,7 @@
       </div>
     </div>
   </section>
+
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -57,6 +72,9 @@
 </script>
 <script>
   vegaEmbed('#manhattan_map', 'manhattan.json', { actions: false }).catch(console.error);
+</script>
+<script>
+  vegaEmbed('#us_map', 'us_housing.json', { actions: false }).catch(console.error);
 </script>
 
 </body>
