--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <section class="col-12 col-lg-10 mx-auto mb-4">
     <div class="card shadow-sm">
       <div class="card-header bg-white border-0 text-center">
-        <h2 class="h5 mb-0">Homework Week 10: Nationwide Housing Price Index Increase Relative to Q1 1980</h2>
+        <h2 class="h5 mb-0">Homework Week 10: Nationwide Housing Price Index Increase Relative to Q1 1980<br>
+          Comparing NY Housing Price Increase overtime to other States in the US, is NY really the most expensive state to buy a house? Has it been overtime?
+        </h2>
       </div>
       <div class="card-body">
         <p class="text-muted text-center mb-3">
