--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           Example: NY's Q1 2025 value of 1094.0 indicates that the price for the same house has risen 10.94x since then.
         </p>
         <div id="us_map" class="viz-panel"></div>
+        <p>Data up to 1980 Q2</p>
       </div>
     </div>
   </section>
